<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NiatActivity"
    android:background="#EEE">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pengertian_zakat"
                android:textColor="#000"
                android:justificationMode="inter_word"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Niat Untuk Diri Sendiri"
                android:textColor="#000"
                android:textSize="25dp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/niat_untuk_dirisendiri"
                android:textColor="#000"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/latin_niat_untuk_dirisendiri"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text='@string/arti_niat_untuk_dirisendiri'
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Niat Untuk Diri Sendiri Dan Keluarga"
                android:textColor="#000"
                android:layout_marginTop="30dp"
                android:textSize="25dp"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/niat_untuk_dirisendiri_dan_keluarga"
                android:textColor="#000"
                android:textSize="22dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/latin_niat_untuk_dirisendiri_dan_keluarga"
                android:textColor="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/arti_niat_untuk_dirisendiri_dan_keluarga"
                android:textColor="#000"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lanjutPembayaran"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Lanjut ke Pembayaran"
            android:textColor="#FFF"
            android:background="#219C90"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/backDashboard"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Kembali"
            android:textColor="#FFF"
            android:background="#113946"
            android:textSize="20dp"/>
    </LinearLayout>
</RelativeLayout>